Speed up c++ code import by hiding the list view dock window.

BUG:316829